--- a/AssesmentWebApi/appsettings.json
+++ b/AssesmentWebApi/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "ConnSTR": "Server=197.242.149.132;Database=TestDB;MultipleActiveResultSets=true;User ID=sa;Password=5un5t0n3" },
+  "ConnectionStrings": { "ConnSTR": "Server=ServerName;Database=TestDB;MultipleActiveResultSets=true;User ID=sa;Password=PWD" },
   "JarVolumeCapacity": 42
 }
